WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197268
REGRESSION(
r230367
): a "." is prepended before cookies set without an explicit domain
https://bugs.webkit.org/show_bug.cgi?id=197268
Summary
REGRESSION(r230367): a "." is prepended before cookies set without an explici...
Devin Rousso
Reported
2019-04-24 18:43:46 PDT
When setting a cookie without a `domain`, we use the current host as the `domain`, but we also prepend a "." to the host. RFC 2965 states "If an explicitly specified value does not start with a dot, the user agent supplies a leading dot.", so we should only be adding a leading "." if a `domain` is provided.
Attachments
Patch
(9.14 KB, patch)
2019-04-24 18:57 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2019-04-24 18:44:00 PDT
<
rdar://problem/49767847
>
Devin Rousso
Comment 2
2019-04-24 18:57:31 PDT
Created
attachment 368207
[details]
Patch
Alex Christensen
Comment 3
2019-04-25 10:13:21 PDT
Comment on
attachment 368207
[details]
Patch r=me, why don't we have tests for this?
Devin Rousso
Comment 4
2019-05-03 14:32:39 PDT
Comment on
attachment 368207
[details]
Patch There are WPT that cover this.
WebKit Commit Bot
Comment 5
2019-05-03 14:59:14 PDT
Comment on
attachment 368207
[details]
Patch Clearing flags on attachment: 368207 Committed
r244924
: <
https://trac.webkit.org/changeset/244924
>
WebKit Commit Bot
Comment 6
2019-05-03 14:59:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug